gRPC/grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtts-grpc
  labels:
    app: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: gtts-grpc
        image: mariochg/gtts-grpc:latest
