gRPC/gtts-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtts-grpc-svc
  labels:
    app: grpc
spec:
  selector:
    app: grpc
  ports:
  - port: 5000
    targetPort: 5000
